methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:6: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
        if (isFacingTrail()){
                         ^